# PulsePrint-Desktop

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  FEATURES.md  FEATURE_DEMO.md  LICENSE  README.md  ROADMAP.md  features.md  sample-printers.csv  sample-printers.json  sample-printers.txt  sample-printers.yaml  sonar-project.properties
.github/: README.md  WORKFLOW_SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/actions/setup-self-hosted/: action.yml
.github/workflows/: ci-clean.yml  ci-old.yml  ci-test-self-hosted.yml  ci.yml  code-quality.yml  code-quality.yml.disabled  codeql-analysis.yml  codeql-analysis.yml.disabled  dependabot-auto-merge.yml  integration-tests.yml  release.yml  security.yml  security.yml.disabled
frontend-react/: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  audit-ci.json  jest.integration.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend-react/public/: index.html  manifest.json  tauri-mock.js
frontend-react/src/: App.test.tsx  App.tsx  index.css  react-app-env.d.ts  setupTests.ts
frontend-react/src/components/: AddPrinterDialog.tsx  Dashboard.tsx  (+7 more)
src-tauri/: Cargo.toml  E2E_TESTING.md  Makefile  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: run-e2e-tests.sh
src-tauri/src/: commands.rs  database.rs  lib.rs  mqtt.rs
src-tauri/tests/: e2e_integration.rs  integration_tests.rs
(+48 files in other folders)
